# mouse-research

./: .gitignore  CLAUDE.md  app.py  pyproject.toml  requirements-cloud.txt  ui_utils.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-foundation-validation/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-05-PLAN.md  01-05-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-single-url-archive-pipeline/: 02-00-SUMMARY.md  02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-03-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-VERIFICATION.md
.planning/phases/03-bulk-search-batch-archive/: 03-02-SUMMARY.md  03-RESEARCH.md
.planning/phases/04-research-graph-hardening/: 04-CONTEXT.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/: articles.json
pages/: 1_Articles.py  2_Search.py  3_Analysis.py  4_Interview_Prep.py
patches/: newspapers-com-scraper.patch.md
scripts/: login_helper.py
src/mouse_research/: __init__.py  analyzer.py  archiver.py  cli.py  config.py  cookies.py  doctor.py  export_pdf.py  extractor.py  fetcher.py  graph.py  installer.py  interview_prep.py  logger.py  obsidian.py  ocr.py  preprocessor.py  searcher.py  sync.py  types.py
tests/: test_analyzer.py  test_config.py  test_export_pdf.py  test_graph.py  test_interview_prep.py  test_searcher.py  test_sync.py  test_ui_utils.py
validation/: ocr-test.md  scraper-test.md
(+27 files in other folders)
