[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mouse-research"
version = "0.1.0"
description = "CLI-driven newspaper research pipeline for the MOUSE documentary project"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.24.1",
    "rich>=14.3.3",
    "pydantic-settings>=2.13.1",
    "playwright>=1.58.0",
    "ollama>=0.6.1",
    "pytesseract>=0.3.13",
    "Pillow>=12.2.0",
    "httpx>=0.27.0",
    "opencv-python>=4.13.0",
    "newspaper4k>=0.9.5",
    "trafilatura>=2.0.0",
    "lxml-html-clean>=0.4.4",
    "python-frontmatter>=1.1.0",
]

[project.scripts]
mouse-research = "mouse_research.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mouse_research"]

[tool.pytest.ini_options]
testpaths = ["tests"]
